# PacAI-v4

./: .env.example  .replit  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SECRETS_CHECKLIST.md  DEPLOY_STEPS.sh  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  ROADMAP.md  TEST_REPORT (copy).md  TEST_REPORT.md  V3_QUICK_START.md  V4_API_CONTRACT.json  V4_MODEL_VAULT.json  V4_RBAC_POLICY.json  design_guidelines.md  fly.toml  next.config.mjs  package-lock.json  package.json  package.json.v3-start  replit.md  tailwind.config.js  test-v3-endpoints.sh  tsconfig.json  tsconfig.next.json  vercel.json  vitest.config.ts
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  images-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: config.json
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/types/: routes.d.ts  validator.ts
Export/Blender/: world.json
Export/CryEngine/: world.json
Export/Godot/: project.godot  world.json
Export/Roblox/: world.json
Export/Source2/: world.json
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
attached_assets/: Pasted-AI-Brain-Core-App-Version-1-1-Specification-Product-Document-For-Developers-Studios-and-Techn-1763870160927_1763870160928.txt  Pasted-Complete-PostgreSQL-Database-Schema-for-PacAI-v4-Air-Gapped-SCIF-Ready-This-schema-is-100-produc-1764084550293_1764084550296.txt  Pasted-Current-Functionality-Still-not-live-https-pacaiwolfstu_1764962588014.txt
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/public/: manifest.json  offline.html  sw.js
client/src/: App.tsx  index.css  main.tsx
data/: worldstate.json
docs/: SECURITY.md
gateway/: .env.example  Cargo.toml  auth.py  db.py  main.py  requirements.txt  setup-and-run.sh  v3_extensions.py
gateway/src/: main.rs
installer/: build-appimage.sh  installer.nsi  pacai.desktop
lib/: paccore-mock.ts
pacai-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pacai-desktop/src-tauri/src/: main.rs
pacai-desktop/ui/: index.html
pacai-gateway/: Cargo.toml
pacai-gateway/config/: licenses.yaml  roles.yaml
pacai-gateway/src/: main.rs
pacai-gateway/src/engine/: mod.rs  narrative.rs  packager.rs  world.rs
pacai-gateway/src/routes/: export.rs  health.rs  license.rs  mod.rs  override_route.rs  prompt.rs
pacai-gateway/src/security/: hsm.rs  mod.rs  rbac.rs
pacai-gateway/src/util/: json.rs  logging.rs  mod.rs  system.rs
pacai-v4/: .gitignore  DEPLOYMENT.md  HARDWARE_NOTES.md  INTEGRATION_GUIDE.md  V4_SPEC.md  replit.md
pacai-v4/admin/: Dockerfile  README.md  package.json
pacai-v4/bridge/: main.py  server.py
pacai-v4/docs/: OPERATOR_MANUAL.md
pacai-v4/exporters/: README.md
pacai-v4/gateway/: Cargo.toml  README.md  build.rs
pacai-v4/gateway/proto/: gen.proto
pacai-v4/gateway/src/: auth.rs  license.rs  main.rs  pb.rs  rbac.rs
pacai-v4/gateway/tests/: determinism.rs
pacai-v4/infra/: docker-compose.yml  schema.sql
pacai-vercel/: .gitignore  README.md  package.json  vercel.json
pacai-vercel/lib/: auth.ts  helpers.ts  kv.ts  requireTier.ts
scripts/: seed-stripe-products.ts
sdk/blender/: pacai_live_sync.py
server/: app.ts  auth.ts  db.ts  drizzle.ts  gallery.ts  index-dev.ts  index-prod.ts  projects.ts  queue.ts  refs.ts  routes.ts  sessions.ts  storage.ts  stripeClient.ts  v5-links.ts  v5-mobile.ts  v5.ts  webhookHandlers.ts  websocket.ts
shared/: schema.ts
tools/: generate_dev_keys.sh  verify_manifest.py
worker/: .gitignore  Dockerfile  README.md  fly.toml  package.json  tsconfig.json
(+218 files in other folders)
